--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ section {
 #first-column {
   background-color: #ffffff;
   border-left: 10px;
+  margin:auto auto auto 3%
 }
 
 #second-column {
@@ -138,3 +139,4 @@ margin: auto -20px;
 .movie-title {
   font-size: 1.2rem;
 }
+
